--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+html,
+body {
+    height: 100%;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+* {
+    box-sizing: border-box;
+    font-family: "Cabin", sans-serif;
+}
+
+div.page-wrapper {
+    height: 100%;
+    width: 100%;
+}
