add clients component including basic layout

--- a/app/src/app/internal/internal.component.scss
+++ b/app/src/app/internal/internal.component.scss
@@ -61,8 +61,8 @@ nb-layout {
                                     }
                                 }
 
-                                svg {
-                                    height: 26px;
+                                nb-icon {
+                                    font-size: 1.7rem;
                                     margin-right: 7.5px;
                                 }
                             }
