--- a/app/src/app/internal/internal.component.scss
+++ b/app/src/app/internal/internal.component.scss
@@ -82,6 +82,10 @@ nb-layout {
     }
 
     nb-layout-column {
-        padding: 60px !important;
+        padding: 45px !important;
+
+        &.content {
+            background-color: #fcfcfc;
+        }
     }
 }
