--- a/app/src/themes.scss
+++ b/app/src/themes.scss
@@ -12,7 +12,9 @@ $nb-themes: nb-register-theme(
         color-primary-600: #6c70d8,
         color-primary-700: #5c5ed6,
         color-primary-800: #4b4ed2,
-        color-primary-900: #3b3ece
+        color-primary-900: #3b3ece,
+        calendar-background-color: #fcfcfc,
+        calendar-border-width: 0
     ),
     healthpad,
     default
