--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -57,7 +57,7 @@ body {
 
 * {
     box-sizing: border-box;
-    font-family: "Cabin", sans-serif;
+    font-family: "Cabin", sans-serif !important;
 }
 
 div.page-wrapper {
