minor style fixes

--- a/app/src/app/internal/calendar/calendar.component.html
+++ b/app/src/app/internal/calendar/calendar.component.html
@@ -2,6 +2,8 @@
     <div class="page-content">
         <div class="sidebar">
             <div class="calendar-preview">
+                <h5>Kalender</h5>
+
                 <nb-calendar-range
                     #calendarPreview
                     [range]="range"
