--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -1,10 +1,11 @@
 @use "variables";
 @import "themes";
-
 @import "~@nebular/theme/styles/globals";
+@import "~@nebular/auth/styles/globals";
 
 @include nb-install() {
     @include nb-theme-global();
+    @include nb-auth-global();
 }
 
 .nb-theme-healthpad
