add logout functionality

--- a/app/src/app/internal/internal.component.html
+++ b/app/src/app/internal/internal.component.html
@@ -14,7 +14,9 @@
 
                     <div class="text">
                         <span class="name"> Monika Stocker </span>
-                        <span class="role"> User </span>
+                        <span class="actions" (click)="handleSignOut()">
+                            Abmelden
+                        </span>
                     </div>
                 </div>
             </div>
