--- a/app/src/app/internal/internal.component.scss
+++ b/app/src/app/internal/internal.component.scss
@@ -36,8 +36,9 @@ nb-layout {
                                     color: variables.$healthpad-color-text;
                                 }
 
-                                &.role {
+                                &.actions {
                                     font-size: 14px;
+                                    cursor: pointer;
                                 }
                             }
                         }
