add firestore service to load user object from database

--- a/app/src/app/internal/internal.component.html
+++ b/app/src/app/internal/internal.component.html
@@ -13,7 +13,10 @@
                     </div>
 
                     <div class="text">
-                        <span class="name"> Monika Stocker </span>
+                        <span class="name">
+                            {{ state.user?.firstName }}
+                            {{ state.user?.lastName }}
+                        </span>
                         <span class="actions" (click)="handleSignOut()">
                             Abmelden
                         </span>
