--- a/app/src/app/public/auth/register/register.component.html
+++ b/app/src/app/public/auth/register/register.component.html
@@ -30,14 +30,14 @@
 
 <form (ngSubmit)="register()" #form="ngForm" aria-labelledby="title">
     <div class="form-control-group">
-        <label class="label" for="input-name">Full name:</label>
+        <label class="label" for="input-name">First name:</label>
         <input
             nbInput
-            [(ngModel)]="user.fullName"
+            [(ngModel)]="user.firstName"
             #fullName="ngModel"
             id="input-name"
-            name="fullName"
-            placeholder="Full name"
+            name="firstName"
+            placeholder="First name"
             autofocus
             fullWidth
             [status]="email.dirty ? (email.invalid ? 'danger' : 'success') : ''"
@@ -50,7 +50,41 @@
         />
         <ng-container *ngIf="fullName.invalid && fullName.touched">
             <p class="error-message" *ngIf="fullName.errors?.required">
-                Full name is required!
+                First name is required!
+            </p>
+            <p
+                class="error-message"
+                *ngIf="fullName.errors?.minlength || fullName.errors?.maxlength"
+            >
+                Full name should contains from
+                {{ getConfigValue("forms.validation.fullName.minLength") }} to
+                {{ getConfigValue("forms.validation.fullName.maxLength") }}
+                characters
+            </p>
+        </ng-container>
+    </div>
+
+    <div class="form-control-group">
+        <label class="label" for="input-name">Last name:</label>
+        <input
+            nbInput
+            [(ngModel)]="user.lastName"
+            #fullName="ngModel"
+            id="input-name"
+            name="lastName"
+            placeholder="Last name"
+            fullWidth
+            [status]="email.dirty ? (email.invalid ? 'danger' : 'success') : ''"
+            [required]="getConfigValue('forms.validation.fullName.required')"
+            [minlength]="getConfigValue('forms.validation.fullName.minLength')"
+            [maxlength]="getConfigValue('forms.validation.fullName.maxLength')"
+            [attr.aria-invalid]="
+                fullName.invalid && fullName.touched ? true : null
+            "
+        />
+        <ng-container *ngIf="fullName.invalid && fullName.touched">
+            <p class="error-message" *ngIf="fullName.errors?.required">
+                Last name is required!
             </p>
             <p
                 class="error-message"
