--- a/app/src/app/internal/inventory/inventory.component.html
+++ b/app/src/app/internal/inventory/inventory.component.html
@@ -76,7 +76,7 @@
 
     <div class="product-list">
         <div
-            class="uk-child-width-1-5@xl uk-child-width-1-4 uk-grid-medium"
+            class="uk-child-width-1-5@xl uk-child-width-1-3@l uk-width-1-1 uk-grid-medium"
             uk-grid
         >
             <div *ngFor="let product of filteredProducts">
