--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -61,7 +61,6 @@ body {
     font-family: "Cabin", sans-serif !important;
 }
 
-
 div.page-wrapper {
     height: 100%;
     width: 100%;
@@ -85,4 +84,9 @@ div.page-header {
 
 nb-sidebar div.page-header h1 {
     font-size: 28px !important;
+}
+
+// uikit fix
+svg {
+    height: 100% !important;
 }
