add settings page with nested routes for different categories

--- a/app/src/app/internal/internal.component.html
+++ b/app/src/app/internal/internal.component.html
@@ -58,6 +58,14 @@
                             Artikel</a
                         >
                     </li>
+                    <li>
+                        <a
+                            [routerLink]="'settings'"
+                            routerLinkActive="uk-active"
+                            ><nb-icon icon="settings-outline"></nb-icon>
+                            Einstellungen</a
+                        >
+                    </li>
                 </ul>
             </div>
 
