--- a/app/src/app/components/image-upload/image-upload.component.html
+++ b/app/src/app/components/image-upload/image-upload.component.html
@@ -2,7 +2,7 @@
     <input type="file" (change)="updatePreview($event)" />
     <div class="image-preview" tabindex="-1">
         <div>
-            <img *ngIf="tempBase64" [src]="tempBase64" />
+            <img *ngIf="previewImage" [src]="previewImage" />
 
             <div class="watermark">
                 <svg
