--- a/app/src/app/components/image-upload/image-upload.component.scss
+++ b/app/src/app/components/image-upload/image-upload.component.scss
@@ -1,6 +1,10 @@
 div {
     width: 100%;
 
+    input {
+        z-index: 10;
+    }
+
     > div.image-preview {
         width: 100%;
         padding-top: 100%;
