--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -57,7 +57,7 @@ body {
 }
 
 * {
-    box-sizing: border-box;
+    box-sizing: border-box !important;
     font-family: "Cabin", sans-serif !important;
 }
 
@@ -70,11 +70,33 @@ div.page-header {
     display: flex;
     justify-content: space-between;
 
+    > div:first-child {
+        display: flex;
+        flex-direction: column;
+    }
+
     h1 {
         font-size: 45px;
         font-weight: 500;
         letter-spacing: 0.7px;
         margin: 0;
+
+        &.small {
+            font-size: 32px;
+        }
+    }
+
+    h2 {
+        font-size: 25px;
+        font-weight: 400;
+        margin: 0;
+    }
+
+    h3 {
+        font-size: 18px;
+        font-weight: 400;
+        margin: 0;
+        line-height: 1;
     }
 
     div.header-action-button {
