--- a/app/src/app/internal/inventory/product-form/product-form.component.html
+++ b/app/src/app/internal/inventory/product-form/product-form.component.html
@@ -18,8 +18,8 @@
                 Löschen
             </button>
         </ng-container>
-        <button nbButton>
-            <nb-icon icon="close-outline" (click)="cancelAction()"></nb-icon>
+        <button nbButton (click)="cancelAction()">
+            <nb-icon icon="close-outline"></nb-icon>
         </button>
     </div>
 </div>
