--- a/app/src/app/internal/clients/clients.component.html
+++ b/app/src/app/internal/clients/clients.component.html
@@ -41,7 +41,10 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let client of filteredClients">
+                <tr
+                    *ngFor="let client of filteredClients"
+                    [routerLink]="client.id"
+                >
                     <td>
                         <ng-container *ngIf="client.image">
                             <div class="uk-cover-container">
